# -computerVision-firstLaboratoryWork

./: .gitignore  CMakeLists.txt  README.md  main.cpp
